--- a/views/agentwisereport.html
+++ b/views/agentwisereport.html
@@ -1,7 +1,7 @@
 <%- include('_head.html'); %>
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">
-            <%= title %>
+            <%= title %> (<%= new Date().toISOString().split('T')[0] %>)
         </h1>
         <% if (true) { %>
             <div class="btn-toolbar mb-2 mb-md-0">
@@ -17,7 +17,9 @@
                 <table class="table table-bordered table-striped" id="reporting-table">
                     <thead class="table-dark">
                         <tr>
+                            
                             <th scope="col">Agent Name</th>
+                            <th scope="col">Call Direction</th>
                             <th scope="col">Campaign Name</th>
                             <th scope="col">Total Calls</th>
                             <th scope="col">Total Talk Time</th>
@@ -31,13 +33,16 @@
                                     <%=cdr.agentName%>
                                 </td>
                                 <td>
-                                    <%=cdr.campaignName%>
+                                    <%=cdr.CallDirection%>
+                                </td>
+                                <td>
+                                    <%= cdr.campaignName ? cdr.campaignName : 'Not Applicable' %>
                                 </td>
                                 <td>
                                     <%=cdr.describeContactCalled%>
                                 </td>
                                 <td>
-                                    <%=cdr.duration%>
+                                    <%=cdr.duration.toFixed(2)%>
                                 </td>
                                 <td>
                                     <%=(cdr.duration /cdr.describeContactCalled).toFixed(2)%>
