--- a/views/campaignwisereport.html
+++ b/views/campaignwisereport.html
@@ -1,7 +1,7 @@
 <%- include('_head.html'); %>
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
         <h1 class="h2">
-            <%= title %>
+            <%= title %> (<%= new Date().toISOString().split('T')[0] %>)
         </h1>
         <% if (true) { %>
             <div class="btn-toolbar mb-2 mb-md-0">
