--- a/views/agentdashboard.html
+++ b/views/agentdashboard.html
@@ -1,17 +1,22 @@
 <%- include('_head.html'); %>
 
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">
-            <%= title %> (<%= new Date().toISOString().split('T')[0] %>)
-        </h1>
-        <% if (true) { %>
-            <div class="btn-toolbar mb-2 mb-md-0">
-                <div class="btn-group me-2">
-                    <a href="/" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Home</a>
-                </div>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3">
+    <h1 class="h2">
+        <%= title %>
+    </h1>
+    <% if (true) { %>
+        <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group me-2">
+                <a href="/" type="button" class="btn btn-sm btn-outline-secondary spinner-trigger">Home</a>
             </div>
-            <% } %>
-    </div>
+        </div>
+        <% } %>
+</div>
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-3 border-bottom">
+    <h5>Report Date: <%= new Date().toISOString().split('T')[0] %>
+    </h5>
+</div>
 
     <%- include('_alert.html'); %>
 
