--- a/views/campaignwisereport.html
+++ b/views/campaignwisereport.html
@@ -1,7 +1,7 @@
 <%- include('_head.html'); %>
-    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3">
         <h1 class="h2">
-            <%= title %> (<%= new Date().toISOString().split('T')[0] %>)
+            <%= title %>
         </h1>
         <% if (true) { %>
             <div class="btn-toolbar mb-2 mb-md-0">
@@ -11,6 +11,12 @@
             </div>
             <% } %>
     </div>
+
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-3 border-bottom">
+        <h5>Report Date: <%= new Date().toISOString().split('T')[0] %>
+        </h5>
+    </div>
+
     <%- include('_alert.html'); %>
         <div class="table-responsive">
             <div id="reporting-table-wrapper" class="dataTables_wrapper dt-bootstrap5">
@@ -72,4 +78,4 @@
                 </table>
             </div>
         </div>
-<%- include('_foot.html'); %>
+        <%- include('_foot.html'); %>
