--- a/views/agentwisereport.html
+++ b/views/agentwisereport.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center mb-3 border-bottom">
-        <h5>Report Date: <%= new Date().toISOString().split('T')[0] %>
+        <h5>Report Date: <%= new Date().toLocaleDateString('en-us') %>
         </h5>
     </div>
 
