--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -1,5 +1,8 @@
 <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-lg-block bg-light sidebar collapse">
   <div class="position-sticky pt-3 sidebar-sticky">
+    
+    
+    <% if (admin) {%>
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>Operations</span>
       <a class="link-secondary" href="#">
@@ -41,8 +44,9 @@
           Inbound Number Provision
         </a>
       </li>
-
     </ul>
+    <% } %>
+
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>Reports</span>
@@ -51,6 +55,8 @@
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
+
+    <% if (admin) {%>
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/campaign-dashboard">
           <span data-feather="server" class="align-text-bottom"></span>
@@ -69,6 +75,9 @@
           Campaign Wise Rep
         </a>
       </li>
+
+      <%}%>
+
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/agent-dashboard">
           <span data-feather="bar-chart-2" class="align-text-bottom"></span>
@@ -76,6 +85,9 @@
         </a>
       </li>
     </ul>
+
+
+
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>User</span>
       <a class="link-secondary" href="#" aria-label="User">
@@ -84,9 +96,9 @@
     </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link spinner-trigger-none" href="javascript:void(0)">
+        <a class="nav-link spinner-trigger-none" href="/auth/logout">
           <span data-feather="log-out" class="align-text-bottom"></span>
-          Sign Out
+          Sign Out [<%=username%>]
         </a>
       </li>
     </ul> 
