--- a/views/____head.html
+++ b/views/____head.html
@@ -19,13 +19,10 @@
   <link href="/stylesheets/simple-datatables.css" rel="stylesheet">
   <!-- Custom styles -->
   <link href="/stylesheets/client.css" rel="stylesheet">
-  <!-- DataTable -->
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css"> -->
-  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css"> -->
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/b-print-2.3.3/datatables.min.css"/>
 </head>
 
 <body onunload="hide_loader()">
+  <% if  (typeof hide_navbar == 'undefined') { %>
   <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-center" href="/">Connect Admin</a>
     <button class="navbar-toggler position-absolute d-lg-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +30,11 @@
     </button>
     <div class="w-100 "></div>
   </header>
+  <% } %>
   <div class="container-fluid">
     <%- include('_loading.html'); %>
     <div class="row">
+      <% if  (typeof hide_sidemenu == 'undefined') { %>
       <%- include('_sidemenu.html'); %>
+      <% } %>
       <main class="col-md-12 ms-sm-auto col-lg-10 px-md-4">
