--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -45,22 +45,24 @@
             </a>
         </h6>
         <ul class="nav flex-column mb-2">
+            <!-- 
             <li class="nav-item">
                 <a class="nav-link spinner-trigger" href="/campaign-dashboard">
                     <span data-feather="server" class="align-text-bottom"></span>
                     Campaign Dashboard
                 </a>
             </li>
+             -->
             <li class="nav-item">
                 <a class="nav-link spinner-trigger" href="/agent-wise-report">
                     <span data-feather="book-open" class="align-text-bottom"></span>
-                    Agent Wise Rep
+                    Agent Wise Report
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link spinner-trigger" href="/campaign-wise-report">
                     <span data-feather="box" class="align-text-bottom"></span>
-                    Campaign Wise Rep
+                    Campaign Wise Report
                 </a>
             </li>
             <li class="nav-item">
@@ -70,6 +72,8 @@
                 </a>
             </li>
         </ul>
+
+        <!-- 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>User</span>
             <a class="link-secondary" href="#" aria-label="User">
@@ -83,6 +87,9 @@
                     Sign Out
                 </a>
             </li>
-        </ul>
+        </ul> 
+        -->
+
+
     </div>
 </nav>
