'%' after the disconnect rate data

--- a/views/campaignwisereport.html
+++ b/views/campaignwisereport.html
@@ -55,7 +55,7 @@
                                     <%=cdr.disconnect%>
                                 </td>
                                 <td>
-                                    <%=cdr.disconnectRate%>
+                                    <%=cdr.disconnectRate%>%
                                 </td>
                                 <td>
                                     <%=cdr.talkTime.toFixed(2)%>
