--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -1,5 +1,8 @@
-<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-lg-block bg-light sidebar collapse">
+<nav id="sidebarMenu" class="col-md-4 col-lg-2 d-lg-block bg-light sidebar collapse">
     <div class="position-sticky pt-3 sidebar-sticky">
+
+        <%if(currentUser && currentUser.admin){%>
+
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>Operations</span>
             <a class="link-secondary" href="#">
@@ -38,13 +41,20 @@
                 </a>
             </li>
         </ul>
+        <%}%>
+
+
+
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>Reports</span>
             <a class="link-secondary" href="#" aria-label="Add a new report">
                 <span data-feather="pie-chart" class="align-text-bottom"></span>
             </a>
         </h6>
+
+
         <ul class="nav flex-column mb-2">
+            <% if(currentUser && currentUser.admin){ %>
             <!-- 
             <li class="nav-item">
                 <a class="nav-link spinner-trigger" href="/campaign-dashboard">
@@ -65,15 +75,20 @@
                     Campaign Wise Report
                 </a>
             </li>
+            <% } %>
+            
+
+            <% if( currentUser && !currentUser.admin ) { %>
             <li class="nav-item">
                 <a class="nav-link spinner-trigger" href="/agent-dashboard">
                     <span data-feather="bar-chart-2" class="align-text-bottom"></span>
                     Agent Dashboard
                 </a>
             </li>
+            <% } %>
         </ul>
 
-        <!-- 
+        
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>User</span>
             <a class="link-secondary" href="#" aria-label="User">
@@ -82,13 +97,13 @@
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link spinner-trigger-none" href="/auth/logout">
+                <a class="nav-link spinner-trigger-none" href="/logout">
                     <span data-feather="log-out" class="align-text-bottom"></span>
-                    Sign Out
+                    Log Out <span class="text-muted small"><%=currentUser.username? '['+currentUser.username+']' : ''%></span>
                 </a>
             </li>
         </ul> 
-        -->
+        
 
 
     </div>
