--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -3,45 +3,45 @@
 
         <%if(currentUser && currentUser.admin){%>
 
-        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-            <span>Operations</span>
-            <a class="link-secondary" href="#">
-                <span data-feather="settings" class="align-text-bottom"></span>
-            </a>
-        </h6>
-        <ul class="nav flex-column">
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" aria-current="page" href="/campaigns">
-                    <span data-feather="list" class="align-text-bottom"></span>
-                    Campaigns
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+                <span>Operations</span>
+                <a class="link-secondary" href="#">
+                    <span data-feather="settings" class="align-text-bottom"></span>
                 </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/create-campaign">
-                    <span data-feather="plus-square" class="align-text-bottom"></span>
-                    Create Campaign
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/agent-provision">
-                    <span data-feather="user-check" class="align-text-bottom"></span>
-                    Agent Provision
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/agent-distribution">
-                    <span data-feather="users" class="align-text-bottom"></span>
-                    Agent Distribution
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/inbound-number-provision">
-                    <span data-feather="phone-incoming" class="align-text-bottom"></span>
-                    Inbound Number Provision
-                </a>
-            </li>
-        </ul>
-        <%}%>
+            </h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" aria-current="page" href="/campaigns">
+                        <span data-feather="list" class="align-text-bottom"></span>
+                        Campaigns
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/create-campaign">
+                        <span data-feather="plus-square" class="align-text-bottom"></span>
+                        Create Campaign
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/agent-provision">
+                        <span data-feather="user-check" class="align-text-bottom"></span>
+                        Agent Provision
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/agent-distribution">
+                        <span data-feather="users" class="align-text-bottom"></span>
+                        Agent Distribution
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/inbound-number-provision">
+                        <span data-feather="phone-incoming" class="align-text-bottom"></span>
+                        Inbound Number Provision
+                    </a>
+                </li>
+            </ul>
+            <%}%>
 
 
 
@@ -55,40 +55,39 @@
 
         <ul class="nav flex-column mb-2">
             <% if(currentUser && currentUser.admin){ %>
-            <!-- 
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/campaign-dashboard">
-                    <span data-feather="server" class="align-text-bottom"></span>
-                    Campaign Dashboard
-                </a>
-            </li>
-             -->
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/agent-wise-report">
-                    <span data-feather="book-open" class="align-text-bottom"></span>
-                    Agent Wise Report
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/campaign-wise-report">
-                    <span data-feather="box" class="align-text-bottom"></span>
-                    Campaign Wise Report
-                </a>
-            </li>
-            <% } %>
-            
+<!-- 
+<li class="nav-item">
+<a class="nav-link spinner-trigger" href="/campaign-dashboard">
+<span data-feather="server" class="align-text-bottom"></span>
+Campaign Dashboard
+</a>
+</li>
+-->
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/agent-wise-report">
+                        <span data-feather="book-open" class="align-text-bottom"></span>
+                        Agent Wise Report
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link spinner-trigger" href="/campaign-wise-report">
+                        <span data-feather="box" class="align-text-bottom"></span>
+                        Campaign Wise Report
+                    </a>
+                </li>
+                <% } %>
 
-            <% if( currentUser && !currentUser.admin ) { %>
-            <li class="nav-item">
-                <a class="nav-link spinner-trigger" href="/agent-dashboard">
-                    <span data-feather="bar-chart-2" class="align-text-bottom"></span>
-                    Agent Dashboard
-                </a>
-            </li>
-            <% } %>
+                <% if( currentUser && !currentUser.admin ) { %>
+                    <li class="nav-item">
+                        <a class="nav-link spinner-trigger" href="/agent-dashboard">
+                            <span data-feather="bar-chart-2" class="align-text-bottom"></span>
+                            Agent Dashboard
+                        </a>
+                    </li>
+                <% } %>
         </ul>
 
-        
+
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>User</span>
             <a class="link-secondary" href="#" aria-label="User">
@@ -97,14 +96,20 @@
         </h6>
         <ul class="nav flex-column mb-2">
             <li class="nav-item">
-                <a class="nav-link spinner-trigger-none" href="/logout">
-                    <span data-feather="log-out" class="align-text-bottom"></span>
-                    Log Out <span class="text-muted small"><%=currentUser.username? '['+currentUser.username+']' : ''%></span>
+                <a class="nav-link spinner-trigger-none" href="/change-password">
+                    <span data-feather="key" class="align-text-bottom"></span>
+                    Change Password
+                    </span>
                 </a>
             </li>
-        </ul> 
-        
-
-
+            <li class="nav-item">
+                <a class="nav-link spinner-trigger-none" href="/logout">
+                    <span data-feather="log-out" class="align-text-bottom"></span>
+                    Log Out <span class="text-muted small">
+                        <%=currentUser.username? '[' +currentUser.username+']' : '' %>
+                    </span>
+                </a>
+            </li>
+        </ul>
     </div>
 </nav>
