--- a/views/unauthorized.html
+++ b/views/unauthorized.html
@@ -26,8 +26,8 @@
         <div class="row">
             <div class="col-12 text-bg-dark px-5 py-4 mt-5 rounded text-center">
                 <div class="row">
-                    <div class="col-12">
-                        <h1 class="h3 mb-4">Connect Admin - Unauthorized!</h1>
+                    <div class="col-12 p-4">
+                        <h1 class="h2 mb-4">Connect Admin - Unauthorized!</h1>
                         <hr>
                     </div>
                     <% if(messages) { %>
@@ -44,9 +44,9 @@
                         <p class="fw-bold fs-5">You are not Authorized to view this Page.</p>
                         <p class="fw-bold">Please go back..</p>
                         <%if(currentUser && !currentUser.admin){%>
-                            <a class="btn btn-danger btn-lg" href="/agent-dashboard">&larr; Back </a>
+                            <a class="btn btn-danger btn-lg mt-5 mb-5" href="/agent-dashboard">&larr; Back </a>
                         <%} else {%>
-                            <a class="btn btn-danger btn-lg" href="/campaigns">&larr; Back </a>
+                            <a class="btn btn-danger btn-lg mt-5 mb-5" href="/campaigns">&larr; Back </a>
                         <% } %>
                     </div>
                 </div>
