--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -43,7 +43,22 @@
             </ul>
             <%}%>
 
-
+            <% if( currentUser && !currentUser.admin ) { %>
+        <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
+            <span>Operations</span>
+            <a class="link-secondary" href="#">
+                <span data-feather="settings" class="align-text-bottom"></span>
+            </a>
+        </h6>
+        <ul class="nav flex-column">
+        <li class="nav-item">
+            <a class="nav-link spinner-trigger" href="/agent-assign-campaign">
+                <span data-feather="repeat" class="align-text-bottom"></span>
+                Assign Campaign
+            </a>
+        </li>
+        </ul>
+        <% } %>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
             <span>Reports</span>
@@ -76,6 +91,11 @@ Campaign Dashboard
                     </a>
                 </li>
                 <% } %>
+
+
+
+
+
 
                 <% if( currentUser && !currentUser.admin ) { %>
                     <li class="nav-item">
