center-login-form

--- a/views/login.html
+++ b/views/login.html
@@ -24,30 +24,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-4 text-bg-dark px-5 py-4 mt-5 rounded">
+            <div class="col-sm-12 offset-md-2 col-md-8 offset-lg-3 col-lg-5 text-bg-dark px-5 py-4 mt-5 rounded">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="h3 mb-4">Connect Admin - Login</h1>
                     </div>
-
-
-
-<% if(messages) { %>
-<div class="col-12">
-<% for (const [key, value] of Object.entries(messages)) { %>
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <%=value%>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-<% } %>
-</div>
-<% } %>
-
-
-
-
-
-
                     <div class="col-12">
                         <form name="authForm" id="authForm" method="post" action="/login/password">
                             <div class="mb-3">
@@ -65,7 +46,7 @@
             </div>
         </div>
     </div>
-    <script src="/javascripts/bootstrap.bundle.min.js"></script>    
+    <script src="/javascripts/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
