--- a/views/login.html
+++ b/views/login.html
@@ -83,7 +83,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control " name="password" id="password" value="" maxlength="24">
+                                <input type="password" class="form-control " name="password" id="password" value="">
                             </div>
                             <button type="submit" class="btn btn-primary mt-3">Sign In</button>
                         </form>
