--- a/views/login.html
+++ b/views/login.html
@@ -85,7 +85,7 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control " name="password" id="password" value="">
                             </div>
-                            <button type="submit" class="btn btn-primary mt-3">Sign In</button>
+                            <button type="submit" class="btn btn-primary mt-3">Log In</button>
                         </form>
                     </div>
                 </div>
